tests/baselines/reference/propertyOverridesAccessors.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/propertyOverridesAccessors.ts(5,5): error TS2610: 'p' is defined as an accessor in class 'A', but is overridden here in 'B' as an instance property.
tests/cases/conformance/classes/propertyMemberDeclarations/propertyOverridesAccessors.ts(13,5): error TS2610: 'p' is defined as an accessor in class 'C', but is overridden here in 'D' as an instance property.


==== tests/cases/conformance/classes/propertyMemberDeclarations/propertyOverridesAccessors.ts (2 errors) ====
    class A {
        get p() { return 'oh no' }
    }
    class B extends A {
        p = 'yep' // error
        ~
!!! error TS2610: 'p' is defined as an accessor in class 'A', but is overridden here in 'B' as an instance property.
    }
    class C {
        _secret = 11
        get p() { return this._secret }
        set p(value) { this._secret = value }
    }
    class D extends C {
        p = 101 // error
        ~
!!! error TS2610: 'p' is defined as an accessor in class 'C', but is overridden here in 'D' as an instance property.
    }
    